--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
       </div>
 
       <ul class="menu-items">
-        <li><mat-icon>fact_check</mat-icon> Dashboard</li>
-        <li><mat-icon>perm_identity</mat-icon>User</li>
+        <li routerLink="/"><mat-icon>fact_check</mat-icon> Dashboard</li>
+        <li routerLink="/user"><mat-icon>perm_identity</mat-icon>User</li>
       </ul>
 
     </mat-drawer>
@@ -20,8 +20,13 @@
         </mat-toolbar-row>
       </mat-toolbar>
     </div>
-  
+
+    <div class="router-container">
+      <router-outlet></router-outlet>
+    </div>
+   
+
   </mat-drawer-container>
 
 
-<router-outlet></router-outlet>
+
