--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mr-16 {
+    margin-right: 16px;
+    margin-top: 5px;
+}
+
+.full-width{
+    width: 100%;
+}
