connect with firebase

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,25 @@
-<p>user works!</p>
+<mat-card appearance="outlined">
+    <table class="user-table">
+     <tr>
+        <th>Name</th>
+        <th>E-Mail</th>
+        <th>City</th>
+     </tr>
+
+     <tr>
+        <td>afrfrf</td>
+        <td>afrfrf</td>
+        <td>afrfrf</td>
+     </tr>
+
+     <tr>
+        <td>afrfrf</td>
+        <td>afrfrf</td>
+        <td>afrfrf</td>
+     </tr>
+
+    </table>
+  </mat-card>
 
 <button (click)="openDialog()" class="add-user-btn" mat-fab color="primary" matTooltip="Add user">
     <mat-icon>add</mat-icon>
