--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -18,13 +18,20 @@
         </div>
 
         <div>
+          <mat-form-field appearance="outline" class="full-width">
+              <mat-label>E-Mail</mat-label>
+              <input  [(ngModel)]="user.email" matInput placeholder="Placeholder">
+              <!-- <mat-hint>Please enter a name
+              </mat-hint> -->
+            </mat-form-field>
+      </div>
+
+        <div>
             <mat-form-field appearance="outline" class="full-width">
                 <mat-label>Birth Date</mat-label>
                 <input  [(ngModel)]="birthDate" matInput placeholder="Placeholder" [matDatepicker]="picker">
                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
-                <!-- <mat-hint>Please enter a name
-                </mat-hint> -->
               </mat-form-field>
         </div>
 
@@ -55,7 +62,7 @@
 
 </div>
 <div mat-dialog-actions>
-  <button mat-button >Cancel</button>
+  <button mat-button (click)="dialogRef.close()" >Cancel</button>
   <button mat-button (click)="saveUser()" cdkFocusInitial>Save</button>
 </div>
 
